# two-faced

./: README.md  pyproject.toml
twofaced/: backend.py  tensor_factory.py
twofaced/dtype/: manager.py  spec.py
